--- a/src/components/post/post-modal/post-modal.module.scss
+++ b/src/components/post/post-modal/post-modal.module.scss
@@ -18,13 +18,23 @@
 
   @include common.mediaquery('tablet') {
     padding: 1rem;
-    width: clamp(30rem, 50vw, 50rem);
+    width: min(80vw, 45rem);
     border-radius: var(--radius-medium);
   }
 
   @include common.mediaquery('desktop') {
-    padding: 1rem 2rem;
+    width: min(80rem, 80vw);
   }
+}
+
+.desktop {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  grid-template-rows: 5rem 1fr auto;
+  align-items: flex-start;
+  column-gap: 2rem;
+  width: 100%;
+  height: 80vh;
 }
 
 .closeButton {
@@ -32,6 +42,12 @@
   justify-content: flex-end;
   margin-left: auto;
   padding-bottom: 0.5rem;
+}
+
+.closeButtonDesktop {
+  position: absolute;
+  top: -1rem;
+  right: -4rem;
 }
 
 .content {
@@ -42,14 +58,21 @@
   min-height: 45dvh;
   max-height: 65vh;
   max-height: 65dvh;
+}
 
-  @include common.mediaquery('desktop') {
-    gap: 2rem;
-  }
+.footer {
+  grid-row: 2 / 2;
 }
 
 .carousel {
   margin: 0 auto;
+  width: 100%;
+}
+
+.carouselDesktop {
+  place-self: center;
+  grid-row: 1 / 4;
+  width: 100%;
 }
 
 .postButtons {
@@ -64,6 +87,40 @@
   }
 
   @include common.mediaquery('desktop') {
+    grid-row: 1 / 3;
+    height: 100%;
+    grid-column: 2 / 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-self: flex-end;
     margin-top: 0;
+  }
+}
+
+.commentsDesktop {
+  @include common.mediaquery('tablet') {
+    grid-column: 2 / 3;
+    height: 100%;
+    overflow: auto;
+    max-height: 60vh;
+  }
+
+  @include common.mediaquery('desktop') {
+    max-height: 60vh;
+  }
+}
+
+.commentForm {
+  grid-row: 3 / 4;
+  background-color: var(--color-primary);
+}
+
+.form {
+  @include common.mediaquery('desktop') {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    max-width: 25rem;
   }
 }
