--- a/src/components/chat-users-list/chat-users-list.module.scss
+++ b/src/components/chat-users-list/chat-users-list.module.scss
@@ -95,3 +95,11 @@
   justify-content: center;
   align-items: center;
 }
+
+.placeholderLoading {
+  width: 100%;
+  height: 5.5rem;
+  background-color: var(--color-secondary);
+  border-radius: var(--radius-small);
+  animation: var(--skeleton-animation);
+}
