--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -6,8 +6,12 @@
   @include common.mediaquery('tablet') {
     min-height: 100dvh;
     display: flex;
-    gap: 5rem;
+    gap: 2rem;
     padding-bottom: 0;
+  }
+
+  @include common.mediaquery('desktop') {
+    gap: 5rem;
   }
 }
 
@@ -19,13 +23,9 @@
   align-items: center;
   flex-direction: column;
 
-  @include common.mediaquery('tablet') {
-    margin-top: 3rem;
-    margin-right: 5rem;
-    padding-bottom: 2rem;
-  }
-
   @include common.mediaquery('desktop') {
+    margin-top: 3rem;
+    padding-bottom: 2rem;
     margin-right: 20rem;
   }
 }
