feat: improve nav buttons

--- a/src/components/buttons/aspect-ratio-buttons/aspect-ratio-buttons.module.scss
+++ b/src/components/buttons/aspect-ratio-buttons/aspect-ratio-buttons.module.scss
@@ -2,13 +2,16 @@
 
 .container {
   margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .aspectRatioButtons {
   display: flex;
   gap: 1rem;
 
-  >button {
+  > button {
     flex-grow: 1;
   }
 }
