--- a/src/components/fetch-error-message/fetch-error-message.module.scss
+++ b/src/components/fetch-error-message/fetch-error-message.module.scss
@@ -6,6 +6,7 @@
   padding: 3rem;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 
   @include common.mediaquery('desktop') {
     padding: 7rem 4rem;
