--- a/src/components/pages/chat/chat.module.scss
+++ b/src/components/pages/chat/chat.module.scss
@@ -10,6 +10,9 @@
   padding-top: 0;
   width: 100%;
   padding-bottom: 6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 
   @include common.mediaquery('tablet') {
     gap: 3rem;
