--- a/src/components/pages/edit-post/edit-post.module.scss
+++ b/src/components/pages/edit-post/edit-post.module.scss
@@ -1,19 +1,17 @@
 .editPost {
-  width: min(85%, 50rem);
+  width: clamp(21rem, 50vw, 40rem);
   margin: 0 auto;
-  margin-top: 5rem;
-  margin-bottom: 4rem;
   display: flex;
   justify-content: center;
   align-items: stretch;
   flex-direction: column;
-  gap: 0rem;
+  gap: 2rem;
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .buttons {
