fix: slider performance

--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -29,6 +29,7 @@
   flex: 0 0 20rem;
   --gap-top: 3rem;
   height: calc(100vh - calc(var(--gap-top) * 2));
+  overflow: auto;
   top: var(--gap-top);
   position: sticky;
   box-shadow: var(--shadow-pimary);
