feat: add long press

--- a/src/components/chat-message/chat-message.module.scss
+++ b/src/components/chat-message/chat-message.module.scss
@@ -27,7 +27,7 @@
 
   @include common.mediaquery('desktop') {
 
-    &:hover>.options {
+    &:hover > .options {
       opacity: 1;
     }
   }
@@ -43,6 +43,10 @@
   align-items: center;
   gap: 0.5rem;
 
+  &:not(:disabled) {
+    cursor: default;
+  }
+
   @include common.mediaquery('desktop') {
     max-width: 20rem;
     padding: 0.5rem 1rem;
@@ -52,6 +56,7 @@
 .options {
   opacity: 0;
   transition: opacity var(--transition);
+  margin-right: 1rem;
 
   @include common.mediaquery('desktop') {
     &:focus {
@@ -64,22 +69,22 @@
   margin-left: 0;
   color: inherit;
 
-  &>.textColumn {
-    &>.textContainer {
+  & > .textColumn {
+    & > .textContainer {
       justify-content: flex-start;
 
-      &>.text {
+      & > .text {
         background-color: var(--color-secondary);
         color: var(--color-text);
       }
     }
   }
 
-  &>.avatar {
+  & > .avatar {
     order: -1;
   }
 
-  &>.time {
+  & > .time {
     right: unset;
     left: 0.5rem;
     text-align: left;
