--- a/src/components/pages/chat/chat.module.scss
+++ b/src/components/pages/chat/chat.module.scss
@@ -2,7 +2,6 @@
 
 .container {
   gap: 1.5rem;
-  overflow-y: auto;
   z-index: 1;
   height: 100%;
   margin-inline: auto;
@@ -17,6 +16,8 @@
   @include common.mediaquery('tablet') {
     gap: 3rem;
     margin: 0 auto;
-    width: clamp(23rem, 40vw, 40rem);
+    max-width: 45rem;
+    padding: 0;
+    padding-right: 5rem;
   }
 }
