--- a/src/components/chat-message/chat-message.module.scss
+++ b/src/components/chat-message/chat-message.module.scss
@@ -1,92 +1,84 @@
-@use '/src/styles/common';
+@use '/src/styles/common.scss';
 
-.message {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  margin-left: auto;
-  position: relative;
-  word-break: normal;
-  max-width: 70%;
-  gap: 0.5rem;
-
-  @include common.mediaquery('desktop') {
-    max-width: 50%;
-  }
-}
-
-.textColumn {
-  display: flex;
-  flex-direction: column-reverse;
-  gap: 0.25rem;
-}
 
 .textContainer {
-  display: flex;
-  justify-content: flex-end;
+    display: flex;
+    justify-content: flex-end;
 
-  @include common.mediaquery('desktop') {
+    @include common.mediaquery('desktop') {
 
-    &:hover > .options {
-      opacity: 1;
+        &:hover > .options {
+            opacity: 1;
+        }
     }
-  }
 }
 
-
 .text {
-  background-color: var(--color-accent);
-  color: var(--color-button-text);
-  border-radius: var(--radius-medium);
-  padding: 0.5rem 1rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-
-  &:not(:disabled) {
-    cursor: default;
-  }
-
-  @include common.mediaquery('desktop') {
-    max-width: 20rem;
+    background-color: var(--color-accent);
+    color: var(--color-button-text);
+    border-radius: var(--radius-medium);
     padding: 0.5rem 1rem;
-  }
+    display: flex;
+    align-items: center;
+    user-select: none;
+    gap: 0.5rem;
+
+    &:not(:disabled) {
+        cursor: default;
+    }
+
+    @include common.mediaquery('desktop') {
+        max-width: 20rem;
+        padding: 0.5rem 1rem;
+    }
 }
 
 .options {
-  opacity: 0;
-  transition: opacity var(--transition);
-  margin-right: 1rem;
+    opacity: 0;
+    transition: opacity var(--transition);
+    margin-right: 1rem;
 
-  @include common.mediaquery('desktop') {
-    &:focus {
-      opacity: 1;
+    @include common.mediaquery('desktop') {
+        &:focus {
+            opacity: 1;
+        }
     }
-  }
 }
 
-.messageReceiver {
-  margin-left: 0;
-  color: inherit;
+.optionsOpen {
+    opacity: 1;
+}
 
-  & > .textColumn {
-    & > .textContainer {
-      justify-content: flex-start;
+.popoverContent {
+    padding: 0.5rem;
+    border-radius: var(--radius-medium);
+    background-color: var(--color-secondary);
+    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, .16));
+}
 
-      & > .text {
-        background-color: var(--color-secondary);
-        color: var(--color-text);
-      }
+.popoverItem {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem 0.5rem;
+    border-radius: var(--radius-small);
+    font-size: 13px;
+    font-weight: 500;
+
+
+    @include common.mediaquery('desktop') {
+
+        &:hover,
+        &:focus {
+            background-color: var(--color-primary);
+        }
     }
-  }
+}
 
-  & > .avatar {
-    order: -1;
-  }
+.popoverItemDestructive {
+    color: var(--color-error);
+}
 
-  & > .time {
-    right: unset;
-    left: 0.5rem;
-    text-align: left;
-  }
+.popoverArrow {
+    fill: var(--color-secondary);
 }
