--- a/src/components/chat-users-list/chat-users-list.module.scss
+++ b/src/components/chat-users-list/chat-users-list.module.scss
@@ -38,13 +38,14 @@
   gap: 1rem;
   border-radius: var(--radius-medium);
   background-color: var(--color-primary);
-  padding: 0.5rem;
+  padding: 0 0.5rem;
+  height: 5rem;
   width: 100%;
   transition: background-color var(--transition);
 
-
   @include common.mediaquery('desktop') {
     padding: 1rem;
+    height: 6rem;
 
     &:hover,
     &:focus {
@@ -104,10 +105,14 @@
 
 .placeholderLoading {
   width: 100%;
-  height: 5.5rem;
+  height: 5rem;
   background-color: var(--color-secondary);
   border-radius: var(--radius-small);
   animation: var(--skeleton-animation);
+
+  @include common.mediaquery('desktop') {
+    height: 6rem;
+  }
 }
 
 .createdAt {
