fix: modal state

--- a/src/components/chat-message/chat-message.module.scss
+++ b/src/components/chat-message/chat-message.module.scss
@@ -49,6 +49,15 @@
     opacity: 1;
 }
 
+.textContainerReceiver {
+    justify-content: flex-start;
+
+    & > .text {
+        background-color: var(--color-secondary);
+        color: var(--color-text);
+    }
+}
+
 .popoverContent {
     padding: 0.5rem;
     border-radius: var(--radius-medium);
