--- a/src/components/pages/chat-room/chat-room.module.scss
+++ b/src/components/pages/chat-room/chat-room.module.scss
@@ -32,6 +32,7 @@
     box-shadow: var(--shadow-pimary);
     height: auto;
   }
+
 }
 
 .goBack {
@@ -47,9 +48,20 @@
   gap: 0.5rem;
   justify-content: center;
   align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: var(--radius-medium);
+  transition: background-color var(--transition-fast);
 
   @include common.mediaquery('tablet') {
     gap: 1rem;
+  }
+
+  @include common.mediaquery('desktop') {
+
+    &:hover,
+    &:focus {
+      background-color: var(--color-primary);
+    }
   }
 }
 
