fix: post modal close button

--- a/src/components/post/post-header/post-header.module.scss
+++ b/src/components/post/post-header/post-header.module.scss
@@ -18,7 +18,12 @@
 }
 
 .createdAt {
+  font-size: 0.9rem;
   color: var(--color-text-gray);
+
+  @include common.mediaquery('tablet') {
+    font-size: 1rem;
+  }
 }
 
 .options {
