--- a/src/components/textarea/text-area.module.scss
+++ b/src/components/textarea/text-area.module.scss
@@ -13,6 +13,7 @@
   flex-direction: column;
   background-color: var(--color-secondary);
   border-radius: var(--radius-small);
+  box-shadow: var(--shadow-border-small);
   overflow: hidden;
   width: auto;
 }
