--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@
   --color-primary: rgb(255, 255, 255);
   --color-secondary: rgb(246 247 249);
   --color-accent: rgb(109, 194, 171);
+  --color-active: rgb(221, 221, 221);
   --color-error: rgb(207, 60, 30);
   --color-error-light: rgb(255, 194, 194);
   --color-gray: rgb(222, 222, 222);
@@ -20,13 +21,14 @@
 
   --skeleton-animation: skeleton 2.5s linear infinite forwards;
 
-  --shadow-0-1: rgb(0, 0, 0, 0.08);
+  --shadow-0-1: rgb(255, 255, 255, 0.145);
   --shadow-1: rgba(0, 0, 0, 0.1);
   --shadow-2: rgba(0, 0, 0, 0.2);
   --shadow-5: rgba(0, 0, 0, 0.5);
   --shadow-8: rgba(0, 0, 0, 0.8);
 
-  --shadow-pimary: inset 0 0 0 1px var(--shadow-0-1);
+  --shadow-border-small: 0 0 0 1px var(--shadow-0-1), 0px 1px 2px rgb(0, 0, 0, 0.16);
+  --shadow-border-medium: 0 0 0 1px var(--shadow-0-1), 0px 2px 2px rgba(0, 0, 0, .2);
 
   --radius-big: 0.9rem;
   --radius-medium: 0.7rem;
@@ -50,6 +52,7 @@
   --color-primary: rgb(35 39 47);
   --color-secondary: rgb(52 58 70);
   --color-gray: rgb(100, 100, 100);
+  --color-active: rgb(197, 197, 197);
   --color-gray-hover: rgb(130, 130, 130);
   --color-overlay: rgba(80, 80, 80, 0.85);
 
@@ -63,5 +66,4 @@
   --shadow-2: rgba(255, 255, 255, 0.2);
   --shadow-5: rgba(255, 255, 255, 0.5);
   --shadow-8: rgba(255, 255, 255, 0.8);
-  --shadow-0-1: rgb(255, 255, 255, 0.08);
 }
