--- a/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -54,7 +54,7 @@
 
     &:hover,
     &:focus {
-      box-shadow: var(--shadow-pimary);
+      box-shadow: var(--shadow-border-small);
       background-color: var(--color-primary);
     }
   }
@@ -63,7 +63,7 @@
 .active {
   @include common.mediaquery('desktop') {
     background-color: var(--color-primary);
-    box-shadow: var(--shadow-pimary);
+    box-shadow: var(--shadow-border-small);
     font-weight: 700;
   }
 }
