--- a/src/components/post/post-placeholder/post-placeholder.module.scss
+++ b/src/components/post/post-placeholder/post-placeholder.module.scss
@@ -10,7 +10,7 @@
   height: 22rem;
   background-color: var(--color-secondary);
   animation: var(--skeleton-animation);
-  box-shadow: var(--shadow-pimary);
+  box-shadow: var(--shadow-border-small);
 
   @include common.mediaquery('tablet') {
     height: 30rem;
