--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,7 +6,8 @@
   --color-accent: rgb(109, 194, 171);
   --color-active: rgb(221, 221, 221);
   --color-error: rgb(207, 60, 30);
-  --color-error-light: rgb(255, 194, 194);
+  --color-error-light: rgb(245, 157, 157);
+  --color-error-light-active: rgb(231, 114, 114);
   --color-gray: rgb(222, 222, 222);
   --color-gray-hover: rgb(200, 200, 200);
   --color-overlay: rgb(20, 20, 20, 0.6);
@@ -52,12 +53,13 @@
   --color-primary: rgb(35 39 47);
   --color-secondary: rgb(52 58 70);
   --color-gray: rgb(100, 100, 100);
-  --color-active: rgb(197, 197, 197);
+  --color-active: rgb(173, 173, 173);
   --color-gray-hover: rgb(130, 130, 130);
   --color-overlay: rgba(80, 80, 80, 0.85);
 
   --color-error: rgb(221, 91, 65);
   --color-error-light: rgba(194, 83, 83, 0.3);
+  --color-error-light-active: rgba(194, 83, 83, 0.5);
 
   --color-text: rgb(232, 232, 232);
   --color-text-gray: rgb(211, 211, 211);
