--- a/src/components/modals/list-modal-item/list-modal-item.module.scss
+++ b/src/components/modals/list-modal-item/list-modal-item.module.scss
@@ -13,9 +13,11 @@
     padding: 0.75rem 0;
     border-radius: var(--radius-small);
 
+
     @include common.mediaquery('desktop') {
         padding: 1rem 0.5rem;
-        transition: background-color var(--transition);
+        transition: all var(--transition-fast);
+        transition-property: background-color, font-weight;
 
         &:hover,
         &:focus {
