--- a/src/components/buttons/button/button.module.scss
+++ b/src/components/buttons/button/button.module.scss
@@ -34,11 +34,13 @@
   @include common.button;
   color: var(--color-text);
   background-color: transparent;
+  box-shadow: inset 0 0 0 1px var(--color-accent);
 
   @include common.mediaquery('desktop') {
     &:hover {
       color: var(--color-button-text)
     }
+
   }
 }
 
