--- a/src/components/dropdown/dropdown-content/dropdown-content.module.scss
+++ b/src/components/dropdown/dropdown-content/dropdown-content.module.scss
@@ -1,12 +1,12 @@
 .content {
     z-index: 3;
+    --padding: 0.5rem;
     padding: 0.5rem;
-    border-radius: var(--radius-medium);
+    border-radius: calc(var(--radius-small) + var(--padding));
     background-color: var(--color-secondary);
     filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, .16));
 }
 
 .arrow {
     fill: var(--color-secondary);
-
 }
