--- a/src/components/post/post-comments/post-comments.module.scss
+++ b/src/components/post/post-comments/post-comments.module.scss
@@ -22,7 +22,8 @@
   justify-content: flex-end;
   align-items: center;
   gap: 0.35rem;
-  padding-right: 1rem;
+  overflow: hidden;
+
 }
 
 .radioGroup {
