feat: add redirect to protected pages

--- a/src/components/chat-message/chat-message.module.scss
+++ b/src/components/chat-message/chat-message.module.scss
@@ -29,12 +29,13 @@
     gap: 0.5rem;
 
     &:not(:disabled) {
-        cursor: default;
+        cursor: auto;
     }
 
     @include common.mediaquery('desktop') {
         max-width: 65ch;
         padding: 0.5rem 1rem;
+        user-select: auto;
     }
 }
 
